--- a/script/templates/base.html
+++ b/script/templates/base.html
@@ -32,7 +32,7 @@
                                 ('/', 'index', '首页'),
                                 ('/player', 'player', '球员信息'),
                                 ('/fee', 'fee', '队费查询'),
-                                ('/', 'video', '精彩视频'),
+                                ('/video', 'video', '精彩视频'),
                                 ('/about', 'about', '球队章程'),
                                 ('/editplayer', 'editplayer', '修改球员'),
                                 ('/editfee', 'editfee', '更新队费'),
@@ -44,7 +44,7 @@
                                 ('/', 'index', '首页'),
                                 ('/player', 'player', '球员信息'),
                                 ('/fee', 'fee', '队费查询'),
-                                ('/', 'video', '精彩视频'),
+                                ('/video', 'video', '精彩视频'),
                                 ('/about', 'about', '球队章程'),
                                 ('/auth/login', 'login', '管理员登录')
                                 ] -%}
