--- a/script/templates/admin/editplayer.html
+++ b/script/templates/admin/editplayer.html
@@ -6,7 +6,7 @@
 {% block body %}
 
         <section class="jumbotron">
-            <h1 class="h1" style="text-align: center;">修改球员信息</h1>
+            <h1 class="display-6" style="text-align: center;">修改球员信息</h1>
             {% with success = get_flashed_messages(category_filter=['success']) %}
                 {% if success %}
                     <div class="alert alert-success">
