--- a/script/templates/fee.html
+++ b/script/templates/fee.html
@@ -5,7 +5,7 @@
 
 {% block body %}
         <section class="jumbotron">
-            <h1 class="h1">队费查询</h1>
+            <h1 class="display-6" style="text-align: center;">队费查询</h1>
             <form class="form-inline my-2 my-lg-0" action="javascript:get_feeList($('#playerList').val());">
                 <div class="form-group">
                     <select class="custom-select form-control mr-2" style="max-width: 50%;" id="playerList">
