--- a/script/templates/video.html
+++ b/script/templates/video.html
@@ -5,7 +5,7 @@
 
 {% block body %}
     <section class="jumbotron">
-        <h1>精彩视频</h1>
+        <h1 class="display-6" style="text-align: center;">精彩视频</h1>
         <hr class="my-4">
         <p class="lead">
             <img src="{{ url_for('static', filename='../static/img/champion.jpg') }}" width="100%" height="auto" alt="">
