--- a/script/templates/admin/editfee.html
+++ b/script/templates/admin/editfee.html
@@ -6,7 +6,7 @@
 {% block body %}
 
         <section class="jumbotron">
-            <h1 class="h1" style="text-align: center;">更新球队费用</h1>
+            <h1 class="display-6" style="text-align: center;">更新球队费用</h1>
             {% for message in get_flashed_messages(with_categories=True) %}
                 {% if success or warning or danger %}
                     <div class="alert alert-{{ message[0] }}">
