--- a/script/templates/index.html
+++ b/script/templates/index.html
@@ -5,7 +5,7 @@
 
 {% block body %}
     <section class="jumbotron">
-        <h1 class="index">绿动是冠军！</h1>
+        <h1 class="display-6 index">绿动是冠军！</h1>
         <hr class="my-4">
         <p class="lead">
             <img src="{{ url_for('static', filename='../static/img/champion.jpg') }}" width="100%" height="auto" alt="">
