--- a/script/templates/player.html
+++ b/script/templates/player.html
@@ -5,7 +5,7 @@
 
 {% block body %}
         <section class="jumbotron">
-            <h1 class="display-6" style="text-align: center;">球员信息</h1>
+            <h1 class="display-6" style="text-align: center;">球员资料</h1>
             <form class="form-inline my-2 my-lg-0" action="javascript:get_player($('#uName').val());">
                 <input id="uName" class="form-control mr-2" style="max-width: 50%;" type="text" list="playerList" placeholder="球员姓名">
                 <datalist id="playerList">
