--- a/script/templates/attend.html
+++ b/script/templates/attend.html
@@ -23,7 +23,22 @@
 
             <hr class="my-4">
 
-            <div id="attendList" style=" width: 100%;">
+            <table class="table table-hover table-striped" id="attendList">
+                <thead>
+                    <tr class="table-success">
+                        <th scope="col">姓名</th>
+                        <th scope="col">出勤次数</th>
+                        <th scope="col">出勤比例</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!--<tr>
+                        <td scope="row">Dark</td>
+                        <td>Column content</td>
+                        <td>Column content</td>
+                    </tr>-->
+                </tbody>
+            </table>
 
             </div>
         </section>
@@ -52,61 +67,6 @@ $(function(){
 
 });
 
-
-function drawChart(data, height){
-    am4core.useTheme(am4themes_animated);
-    var chart = am4core.create("attendList", am4charts.XYChart);
-    chart.scrollbarX = new am4core.Scrollbar();
-
-    // Add data
-    chart.data = data;
-
-    // Create axes
-    var categoryAxis = chart.yAxes.push(new am4charts.CategoryAxis());
-    categoryAxis.dataFields.category = "_id";
-    categoryAxis.renderer.grid.template.location = 0;
-    categoryAxis.renderer.minGridDistance = 20;
-    categoryAxis.renderer.labels.template.horizontalCenter = "right";
-    categoryAxis.renderer.labels.template.verticalCenter = "middle";
-    categoryAxis.renderer.labels.template.rotation = 0;
-    categoryAxis.tooltip.disabled = true;
-    categoryAxis.renderer.minHeight = 110;
-
-    var valueAxis = chart.xAxes.push(new am4charts.ValueAxis());
-    valueAxis.renderer.minWidth = 50;
-    valueAxis.renderer.labels.template.dy = -height + 45;
-    //valueAxis.title.text = "出勤次数";
-
-    // Create series
-    var series = chart.series.push(new am4charts.ColumnSeries());
-    series.sequencedInterpolation = true;
-    series.dataFields.categoryY = "_id";
-    series.dataFields.valueX = "total";
-    series.tooltipText = "[{categoryY}: bold]{categoryY}：{valueX}[/]";
-    series.columns.template.strokeWidth = 0;
-
-    //series.tooltip.pointerOrientation = "vertical";
-
-    series.columns.template.column.cornerRadiusTopRight = 10;
-    series.columns.template.column.cornerRadiusBottomRight = 10;
-    series.columns.template.column.fillOpacity = 0.8;
-
-    // on hover, make corner radiuses bigger
-    var hoverState = series.columns.template.column.states.create("hover");
-    hoverState.properties.cornerRadiusTopRight = 0;
-    hoverState.properties.cornerRadiusBottomRight = 0;
-    hoverState.properties.fillOpacity = 1;
-
-    series.columns.template.adapter.add("fill", function(fill, target){
-    return chart.colors.getIndex(target.dataItem.index);
-    })
-
-    // Cursor
-    chart.cursor = new am4charts.XYCursor();
-
-
-};
-
 function get_attend() {
     dateStart = $('#dateStart').val();
     dateEnd = $('#dateEnd').val();
@@ -118,14 +78,12 @@ function get_attend() {
             type: "GET",
             dataType: "json",
             success: function (data) {
-                console.log(data)
-                var str = '';
-                for (var i = 0; i < data.length; i++) {
-                    str += '<p>'+data[i]._id+' : '+data[i].total+'</p>';
+                var res_str = '';
+                for(var i = 0; i < data.length; i++) {
+                    res_str = res_str + '<tr><td scope="row">' + data[i]._id + '</td><td>' + data[i].total + '</td><td>' + data[i].percent + '</td></tr>'
                 }
-                height = data.length * 32
-                $('#attendList').css('height', height+'px');
-                drawChart(data, height);
+
+                $('#attendList').find('tbody').html(res_str);
             },
             error: function (response, status, error) {
                 console.log('Error: ' + error + ". Status: " + status);
