--- a/script/templates/player.html
+++ b/script/templates/player.html
@@ -27,7 +27,7 @@
                 </thead>
                 <tbody>
                     <!--<tr>
-                        <th scope="row">Dark</th>
+                        <td scope="row">Dark</td>
                         <td>Column content</td>
                         <td>Column content</td>
                         <td>Column content</td>
@@ -73,7 +73,7 @@ function get_player(name) {
                 for (var j = 0; j < data[i].position.length; j++) {
                     pos_str = pos_str + '<span class="badge badge-primary mr-1">' + data[i].position[j] + '</span>'
                 }
-                res_str = res_str + '<tr><th scope="row">' + data[i].name + '</th><td>' + data[i].num + '</td><td>' + data[i].dob + '</td><td>' + pos_str + '</td></tr>'
+                res_str = res_str + '<tr><td scope="row">' + data[i].name + '</td><td>' + data[i].num + '</td><td>' + data[i].dob + '</td><td>' + pos_str + '</td></tr>'
             }
 
             $('#playerTable').find('tbody').html(res_str);
