--- a/script/templates/index.html
+++ b/script/templates/index.html
@@ -8,7 +8,7 @@
         <h1 class="display-6 index">绿动是冠军！</h1>
         <hr class="my-4">
         <p class="lead">
-            <img src="{{ url_for('static', filename='../static/img/champion-sm.jpg') }}" width="100%" height="auto" alt="">
+            <img src="{{ url_for('static', filename='../static/img/champion-sm.jpg') }}" width="100%" height="auto" alt="我们的球队是 绿动！">
         </p>
     </section>
 {% endblock %}
